# nordle

./: .env-example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  cog.toml  compose.yml
.github/workflows/: release.yml
assets/: index.html
src/: main.rs
src/server/: mod.rs  utils.rs
src/server/api/: mod.rs  v1.rs
